@@ -3049,7 +3049,7 @@ class _TestTimestep(TestCase):
 
     def setUp(self):
         self.ts = self.Timestep(self.size)
-        self.ts._pos = self.refpos
+        self.ts._pos[:] = self.refpos
 
     def tearDown(self):
         del self.ts
@@ -3157,6 +3157,11 @@ class _TestTimestep(TestCase):
         else:
             assert_raises(NotImplementedError, getattr, self.ts, "volume")
 
+    def test_coordinate_getter_shortcuts(self):
+        """Check that reading _x, _y, and _z works as expected (Issue 224)"""
+        assert_allclose(self.ts._x, self.ts._pos[:,0])
+        assert_allclose(self.ts._y, self.ts._pos[:,1])
+        assert_allclose(self.ts._z, self.ts._pos[:,2])
 
 # Can add in custom tests for a given Timestep here!
 class TestBaseTimestep(_TestTimestep, _BaseTimestep):
@@ -3235,5 +3240,13 @@ class TestXTCTimestep(_TestTimestep, _XTCTimestep):
 
 
 class TestTRRTimestep(_TestTimestep, _TRRTimestep):
-    
-    pass
+    def test_coordinate_setter_shortcuts(self):
+        """Check that writing to _x, _y, and _z works as expected (Issue 224)"""
+        # For TRRs setting _x, _y, and _z works because the assignment is managed by a decorator.
+        # For other formats that don't have such decorators assigning to any of these silently breaks
+        #  their being a view of the _pos array. Hopefuly all gets clean after Issue 213 is addressed
+        #  and this test can be moved to the general Timestep test class.
+        for coordinate in ('_x', '_y', '_z'):
+            random_positions = np.random.random(self.size).astype(np.float32)
+            setattr(self.ts, coordinate, random_positions)
+            assert_allclose(getattr(self.ts, coordinate), random_positions)
